# TTSMixmaster

./: .env.template  .gitignore  README.md  SECURITY.md  TTSMixmaster-onefile.spec  Woodys Progressive Metal.json  config.json.template  example.py  main.py  pyproject.toml  requirements.txt  setup.py  test_simple_playlist.lua
.github/: CONTRIBUTING.md  README.md  RELEASE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: build-and-release.yml
docs/: API_REFERENCE.md  CONFIGURATION.md  GITHUB_SECRETS.md  INSTALLATION.md  MSI_INSTALLER_FIX.md  PORTABLE_VERSION_FIX.md  PROJECT_SUMMARY.md  TROUBLESHOOTING.md  TTS_INTEGRATION.md  USAGE.md
installer/: TTSMixmaster.iss  TTSMixmaster.wixproj  TTSMixmaster.wxs
memory_bank/: AUDIO_UPDATES.md  AZURE_SETUP.md  COMPLETION_SUMMARY.md  IMAGE_URL_FEATURE.md  PROJECT_SUMMARY.md
scripts/: update_version.py  validate_build.py
src/: __init__.py
src/api/: __init__.py  base_service.py  lastfm_client.py  lastfm_service.py  service_manager.py  spotify_service.py  youtube_service.py
src/downloader/: __init__.py  audio_downloader.py
src/gui/: __init__.py  main_window.py  playlist_tab.py
src/tts_formatter/: __init__.py  tts_formatter.py  tts_formatter_backup.py  tts_formatter_new.py
src/uploader/: __init__.py  azure_blob_uploader.py  azure_uploader.py  steam_uploader.py
src/utils/: __init__.py  config.py
tests/: test_audio_improvements.py  test_azure_upload.py  test_basic.py  test_content_settings.py  test_full_integration.py  test_image_url_feature.py  test_new_format.py  test_simplified_files.py  test_tts_format.py
