[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttsmixmaster"
version = "1.0.0"
description = "A comprehensive tool for managing Last.fm playlists and integrating them with Tabletop Simulator"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Logan", email = "your-email@example.com"}
]
keywords = ["lastfm", "tabletop-simulator", "music", "playlist", "steam-workshop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pydub>=0.25.1",
    "mutagen>=1.47.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "isodate>=0.6.1",
    "azure-storage-blob>=12.19.0",
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "yt-dlp>=2023.7.6",
    "imageio-ffmpeg>=0.4.8",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "steam>=1.4.4",
    "pathlib2>=2.3.7",
    "configparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "pyinstaller>=5.13.0",
    "setuptools>=61.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/TTSMixmaster"
Repository = "https://github.com/yourusername/TTSMixmaster"
Issues = "https://github.com/yourusername/TTSMixmaster/issues"

[project.scripts]
ttsmixmaster = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]
